--- a/tambah.html
+++ b/tambah.html
@@ -39,7 +39,9 @@
           <label for="nama" class="block mb-2 text-sm font-medium text-zinc-900 dark:text-white">Nama</label>
           <input type="text" name="nama" id="nama" class="bg-zinc-50 border border-zinc-300 text-zinc-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-zinc-700 dark:border-zinc-600 dark:placeholder-zinc-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Masukkan nama karyawan" required="">
         </div>
-        <div><label for="posisi" class="block mb-2 text-sm font-medium text-zinc-900 dark:text-white">Posisi</label><select id="posisi" class="bg-zinc-50 border border-zinc-300 text-zinc-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-zinc-700 dark:border-zinc-600 dark:placeholder-zinc-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500">
+        <div>
+          <label for="posisi" class="block mb-2 text-sm font-medium text-zinc-900 dark:text-white">Posisi</label>
+          <select id="posisi" class="bg-zinc-50 border border-zinc-300 text-zinc-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-zinc-700 dark:border-zinc-600 dark:placeholder-zinc-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500">
             <option selected="">Pilih posisi</option>
             <option value="Tech Lead">Tech Lead</option>
             <option value="Frontend Developer">Frontend Developer</option>
@@ -54,7 +56,8 @@
             <option value="Software Tester">Software Tester</option>
             <option value="IT Consultant">IT Consultant</option>
             <option value="Network Specialist">Network Specialist</option>
-          </select></div>
+          </select>
+        </div>
         <div>
           <label for="email" class="block mb-2 text-sm font-medium text-zinc-900 dark:text-white">Email</label>
           <input type="email" name="email" id="email" class="bg-zinc-50 border border-zinc-300 text-zinc-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-zinc-700 dark:border-zinc-600 dark:placeholder-zinc-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Masukkan email karyawan" required="">
